--- a/src/App.css
+++ b/src/App.css
@@ -66,3 +66,41 @@
   src: local("Supply-Regular"),
     url("./../public/assets/fonts/Supply-Regular.otf") format("truetype");
 }
+
+@font-face {
+  font-family: "PPPangaia-Medium";
+  src: local("PPPangaia-Medium"),
+    url("./../public/assets/fonts/PPPangaia-Medium.otf") format("truetype");
+}
+
+@font-face {
+  font-family: "PPFragment-GlareExtraBold";
+  src: local("PPFragment-GlareExtraBold"),
+    url("./../public/assets/fonts/PPFragment-GlareExtraBold.otf")
+      format("truetype");
+}
+@font-face {
+  font-family: "NeueHaasDisplayRomanItalic";
+  src: local("NeueHaasDisplayRomanItalic"),
+    url("./../public/assets/fonts/NeueHaasDisplayRomanItalic.ttf")
+      format("truetype");
+}
+@font-face {
+  font-family: "NeueHaasDisplayLightItalic";
+  src: local("NeueHaasDisplayLightItalic"),
+    url("./../public/assets/fonts/NeueHaasDisplayLightItalic.ttf")
+      format("truetype");
+}
+
+@font-face {
+  font-family: "FFF-AcidGrotesk-Bold";
+  src: local("FFF-AcidGrotesk-Bold"),
+    url("./../public/assets/fonts/FFF-AcidGrotesk-Bold.otf") format("truetype");
+}
+
+@font-face {
+  font-family: "FFF-AcidGrotesk-ExtraBold";
+  src: local("FFF-AcidGrotesk-ExtraBold"),
+    url("./../public/assets/fonts/FFF-AcidGrotesk-ExtraBold.otf")
+      format("truetype");
+}
