--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,52 @@
 body {
   margin: 0;
-  font-family: "Supply-Regular", -apple-system, BlinkMacSystemFont, "Segoe UI",
-    "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
-    "Helvetica Neue", sans-serif;
+  font-family: "NeueHaasDisplayRoman", -apple-system, BlinkMacSystemFont,
+    "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
+    "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-size: "12px";
-  background-color: #f5f5f7;
+  background-color: #ffffff;
 }
 
 code {
-  font-family: "Supply-Regular", source-code-pro, Menlo, Monaco, Consolas,
+  font-family: "NeueHaasDisplayRoman", source-code-pro, Menlo, Monaco, Consolas,
     "Courier New", monospace;
+}
+
+.open {
+  transition: transform 0.9s ease-in-out;
+}
+
+.closed {
+  transition: transform 0.3s ease-in-out;
+}
+
+.icon {
+  font-size: 30px;
+}
+
+.octagon {
+  width: "100%";
+  height: 700px;
+  border: 1px solid #000;
+  clip-path: polygon(
+    30% 0%,
+    70% 0%,
+    100% 30%,
+    100% 70%,
+    70% 100%,
+    30% 100%,
+    0% 70%,
+    0% 30%
+  );
+}
+
+.glassmorphism {
+  background: rgba(255, 255, 255, 0.28);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(9.8px);
+  -webkit-backdrop-filter: blur(9.8px);
+  border: 1px solid rgba(255, 255, 255, 0.26);
 }
